--- a/app/static/styles.css
+++ b/app/static/styles.css
@@ -78,13 +78,15 @@ p {
 
 /* Forms */
 .form-step {
-    display: flex;
+    
     flex-direction: column;
     gap: 20px;
     align-items: center;
 }
 
 label {
+    
+    margin-bottom: 10px;
     font-weight: 600;
     font-size: 1.1em;
 }
@@ -172,8 +174,19 @@ footer {
 }
 
 .buttons {
-    display: flex;
-    justify-content: center;
+    
     gap: 20px;
     margin-top: 20px;
+}
+
+.radio-button {
+    padding: 15px 30px;
+    font-size: 1.2em;
+    color: white;
+    background: linear-gradient(to right, #3949ab, #5c6bc0);
+    border: #3949ab;
+    border-radius: 25px;
+    cursor: pointer;
+    transition: transform 0.2s, background-color 0.3s;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.2);
 }
