--- a/templates/index.html
+++ b/templates/index.html
@@ -11,7 +11,7 @@
     <header class="menu-bar">
         <div class="menu-container">
             <div class="logo">
-                <img src="logo.png" alt="TartamIA Logo">
+                <img src="/media/logo.png" alt="TartamIA Logo">
                 <h1>Tartam<span>IA</span></h1>
             </div>
             <nav>
@@ -92,5 +92,6 @@
             }
         });
     </script>
+
 </body>
 </html>
