Modularizacion del backend y mejoras con el frontend

--- a/Frontend/templates/contact.html
+++ b/Frontend/templates/contact.html
@@ -13,45 +13,64 @@
   <title>TartamIA</title>
 </head>
 
-<header>
-  <nav class="navbar">
-    <div class="logo">
-      <img class="imgLogo" src="../static/images/LOGOT.png"/>
-      <span class="titulo">TartamIA</span>
-    </div>
-      <ul class="opciones">
-        <span><button id="homeBtn" >
-          <img class="imgNav" src="../static/images/home.png">
-          Home
-        </button></span>
-      </li>  
-      <li>
-        <span><button  id="formBtn" >
-          <img class="imgNav" src="../static/images/pastel.png"> ¡Haz tu Pastel!
-        </button></span>
-      </li>   
-      <li>  
-        <span><button  id="productsBtn" >
-          <img class="imgNav" src="../static/images/producto.png">
-          Productos
-        </button></span>
-      </li>  
-      <li>  
-        <span><button  id="contactBtn" >
-          <img class="imgNav" src="../static/images/contacto.png">
-          Contacto
-        </button></span>
-      </li>
-      <li>  
-        <span><button id="loginBtn" >
-          <img class="imgNav" src="../static/images/confi.png">
-        </button></span>
-      </li>
-      </ul>
-      
-  </nav>
-</header>  
+
 <body>
+
+
+  <header>
+    <nav class="navbar">
+      <div class="logo">
+        <img class="imgLogo" src="../static/images/LOGOT.png"/>
+        <span class="titulo">TartamIA</span>
+      </div>
+        <ul class="opciones">
+            <li>
+               <span>
+                 <button id="homeBtn" >
+                  <img class="imgNav" src="../static/images/home.png">
+                    Home
+                 </button>
+               </span>
+            </li>  
+
+            <li>
+              <span>
+                <button  id="formBtn" >
+                   <img class="imgNav" src="../static/images/pastel.png"> 
+                   ¡Haz tu Pastel!
+                </button>
+              </span>
+           </li>   
+
+           <li>  
+              <span>
+                <button  id="productsBtn" >
+                   <img class="imgNav" src="../static/images/producto.png">
+                   Productos
+                </button>
+              </span>
+           </li>  
+
+           <li>  
+               <span>
+                 <button  id="contactBtn" >
+                 <img class="imgNav" src="../static/images/contacto.png">
+                  Contacto
+                 </button>
+               </span>
+           </li>
+
+            <li>  
+              <span>
+                <button id="loginBtn" >
+                   <img class="imgNav" src="../static/images/confi.png">
+                </button>
+              </span>
+            </li>
+      </ul>
+        
+    </nav>
+  </header>  
    
 
   <footer>
