--- a/Frontend/static/style.css
+++ b/Frontend/static/style.css
@@ -10,6 +10,17 @@ html, body {
     overflow-x: hidden; 
   }
 
+  #grupoForma {
+    display: flex;
+     /* Cambia la dirección a columna */
+    /* Alinea los elementos a la izquierda */
+    gap: 10px; /* Espacio entre los elementos */
+    margin: 15px;
+    
+    
+}
+
+
 footer {
    
     background: linear-gradient(to top,#ec7879,60%, #ffffff);
@@ -22,8 +33,8 @@ footer {
     margin-top: auto;
 }
 .navbar{
-    background: linear-gradient(to bottom right, #ec7879, #ffffff);
-    
+
+    background: linear-gradient(to bottom right, #ffffff,#ec7879);
     justify-content: space-between;
     align-items: center;
     padding: 10px 20px;
@@ -95,7 +106,7 @@ footer {
 .tituloForm {
     display: block;
     text-align: center;
-    font-size: 24px;
+    font-size: 30px;
     font-weight: bold;
     color: #8B4513; /* Marrón pastel */
     margin-bottom: 20px;
@@ -104,6 +115,7 @@ footer {
 .formS{
     text-align: justify;
     font-family: 'Slabo 27px', serif;
+    align-items: center; 
 }
 
 .frase{
@@ -127,6 +139,7 @@ footer {
     box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.1);
     flex-grow: 1;  /* Hace que el contenedor ocupe el espacio restante */
     padding-bottom: 50px; 
+    align-items: center;
     
 
 }
@@ -134,10 +147,12 @@ footer {
 
 
 .labelForm {
+
     font-weight: bold;
     color: #5a3e36; /* Color café suave */
     display: block;
     margin-bottom: 5px;
+    font-size: 20px;
 }
 
 /* Estilo para los inputs */
@@ -151,11 +166,7 @@ select {
     font-size: 16px;
 }
 
-#grupoForma {
-    display: flex; /* Flexbox para alinear los elementos en fila */
-    align-items: center; /* Alinea verticalmente los elementos al centro */
-    gap: 15px; /* Espacio entre los elementos */
-}
+
 
 .radio-button {
     display: inline-block; /* Hace que las etiquetas se mantengan en línea */
@@ -179,10 +190,66 @@ select {
 #submitBtn:hover {
     background: #a0522d; /* Marrón oscuro */
 }
-
+.clas-i{
+    color: #25a144;
+}
 .main-content {
-    flex-grow: 1;
+    flex-grow: 1 !important; 
 }
 .section{
-    margin-bottom: 20px; 
+    margin-bottom: 10px; 
 }
+
+.labelOp{
+    font-family: 'Slabo 27px', serif;
+    color: #3d0c08;
+    font-size: 17px;
+    margin-left: 40px;
+    
+}
+
+/*Estilo de Login*/
+
+
+/* Personaliza el fondo */
+.custom-background {
+    background-color: #ec7879 !important;
+  }
+  
+  /* Personaliza el borde de la tarjeta */
+  .card-body {
+    border-radius: 1rem !important;
+  }
+  
+  /* Personaliza la imagen */
+  .custom-img {
+    border-radius: 1rem 0 0 1rem !important;
+    width: 50px;
+    height: 50px;
+  }
+  .custom-container img {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%); /* Centra la imagen completamente */
+  }
+
+  .labelFL{
+    font-size: 20px;
+    font-weight: bold;
+    color: #3d0c08;
+    font-family: 'Slabo 27px', serif;
+  }
+
+  .labelFLS{
+    font-size: 10px;
+    color: #3d0c08;
+    font-family: 'Slabo 27px', serif;
+  }
+
+  .car-Page{
+    
+          margin-top: -100px;
+          backdrop-filter: blur(30px);
+  }
+  
