--- a/Frontend/templates/form.html
+++ b/Frontend/templates/form.html
@@ -1,164 +1,133 @@
+<!-- templates/home.html -->
+{% extends "index.html" %}
 
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <link rel="icon" href="../static/images/LOGOT.ico" type="image/x-icon">  
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="/static/style.css">
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-  <link href="https://fonts.googleapis.com/css2?family=Slabo+27px&display=swap" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css2?family=Dancing+Script&display=swap" rel="stylesheet">
+{% block content %}
 
-  <title>TartamIA</title>
-</head>
 
-<header>
-  <nav class="navbar">
-    <div class="logo">
-      <img class="imgLogo" src="../static/images/LOGOT.png"/>
-      <span class="titulo">TartamIA</span>
-    </div>
-      <ul class="opciones">
-        <span><button id="homeBtn" >
-          <img class="imgNav" src="../static/images/home.png">
-          Home
-        </button></span>
-      </li>  
-      <li>
-        <span><button  id="formBtn" >
-          <img class="imgNav" src="../static/images/pastel.png"> ¡Haz tu Pastel!
-        </button></span>
-      </li>   
-      <li>  
-        <span><button  id="productsBtn" >
-          <img class="imgNav" src="../static/images/producto.png">
-          Productos
-        </button></span>
-      </li>  
-      <li>  
-        <span><button  id="contactBtn" >
-          <img class="imgNav" src="../static/images/contacto.png">
-          Contacto
-        </button></span>
-      </li>
-      <li>  
-        <span><button id="loginBtn" >
-          <img class="imgNav" src="../static/images/confi.png">
-        </button></span>
-      </li>
-      </ul>
-      
-  </nav>
-</header>  
-<body>
+    <!-- Enlace a una página -->
+
+    <div class="container">
+      <label class="tituloForm">Diseñemos tu pastel</label>
+      <form action="/submit-form" method="POST" class="formS">
+          <!-- Sección de Sabor -->
+          <div class="section">
+              <label class="labelForm">Sabor:</label>
+              <div id="grupoForma">
+                  <label class="labelOp"><input type="radio" name="sabor" value="vainilla"> Vainilla</label>
+                  <label class="labelOp"><input type="radio" name="sabor" value="chocolate"> Chocolate</label>
+                  <label class="labelOp"><input type="radio" name="sabor" value="marmoleado"> Marmoleado</label>
+              </div>
+          </div>
   
-        <div class="container">
-            
-                  <label class="tituloForm" > Diseñemos tu pastel</label>
-                    <form action="/submit-form" method="POST" class="formS">
-                          <div class="section">
-                                   <label class="labelForm">Número de porciones:    </label>
-                                   <input type="number" id="porciones" name="porciones">
-                          </div>
-
-                          <div class="section">
-                             <div id="grupoForma">
-                                <label class="labelForm">Forma del pastel:    </label>
-
-                                <input type="radio" id="forma-corazon" name="forma" value="corazón" >
-                                <label class="labelForm" for="forma-corazon" class="radio-button">❤️ Corazón</label>
-                                
-                                <input type="radio" id="forma-cuadrado" name="forma" value="cuadrado" >
-                                <label class="labelForm" for="forma-cuadrado" class="radio-button">⬜ Cuadrado</label>
-     
-                                <input type="radio" id="forma-circulo" name="forma" value="círculo" >
-                                <label class="labelForm" for="forma-circulo" class="radio-button">⚪ Círculo</label>
-                             </div>
-                          </div>
-
-                          <div class="section">
-                               <label class="labelForm" >Sabor del pastel:    </label>
-                                  <select class="labelForm" name="sabor" id="sabor" class="styled-select">
-                                      <option value="" disabled selected>Selecciona un sabor</option>
-                                      <option value="Chocolate" >Chocolate</option>
-                                      <option value="Vainilla">Vainilla</option>
-                                      <option value="wRed Velvet">Red Velvet</option>
-                                 </select>
-                          </div>
-
-                          <div class="section">
-                             <label class="labelForm" >Topping:    </label>
-                                <select name="topping" id="topping" class="styled-select " >
-                                  <option value="" disabled selected>Selecciona un topping</option>
-                                   <option value="chocolate chips">Chispas de Chocolate</option>
-                                   <option value="fruit slices">Pedazos de Fruta</option>
-                                   <option value="whipped cream">Crema Pastelera</option>
-                               </select>
-                         </div>
-
-                         <div class="section">
-                            <label class="labelForm" >Temática:    </label>
-                            <input type="text" id="tematica" name="tematica">
-                         </div>
-
-                        <div class="section">
-                           <label class="labelForm" >Colores:    </label>
-                           <input type="text" id="color" name="color">
-                        </div>
-
-                        <div class="section">
-                            <label class="labelForm" >Estilo:    </label>
-                              <div id="grupoEstilo">
-                                 <input type="radio" id="estilo-moderno" name="estilo" value="moderno" >
-                                 <label for="estilo-moderno" class="radio-button">Moderno</label>
-
-                                 <input type="radio" id="estilo-tradicional" name="estilo" value="tradicional" >
-                                 <label for="estilo-tradicional" class="radio-button">Tradicional</label>
-                
-                                 <input type="radio" id="estilo-rustico" name="estilo" value="rustico" >
-                                 <label for="estilo-rustico" class="radio-button"></label>Rústico</label>
-                
-                                 <input type="radio" id="estilo-elgante" name="estilo" value="elegante" >
-                                 <label for="estilo-elegante" class="radio-button">Elegante</label>
-                
-                              </div> 
-                        </div>
-
-                        <div class="section"> 
-                           <label class="labelForm" >Decoraciones:    </label>
-                                <select name="decoracion" id="decoracion" class="styled-select">
-                                   <option value="Flores">Flores</option>
-                                   <option value="fondant">Fondant</option>
-                                   <option value="crema pastelera">Crema Pastelera</option>
-                                   <option value="ninguno">Ninguno</option>
-                                </select>
-                        </div>
-
-                        <div class="section">
-                            <label class="labelForm" >Texto o mensaje:    </label>
-                            <input type="text" id="mensage" name="mensaje">
-                        </div>
-
-                        <div class="section">
-        
-                          <button type="button" id="submitBtn">Generar Pastel</button>
-                        </div>
-
-                 
-            </div>
-        </div>
-
-</form>
-
-    
+          <!-- Sección de Forma del pastel -->
+          <div class="section">
+              <label class="labelForm">Forma del pastel:</label>
+              <div id="grupoForma">
+                  <label class="labelOp"><input type="radio" name="forma" value="corazón">  Corazón</label>
+                  <label class="labelOp"><input type="radio" name="forma" value="cuadrado">  Cuadrado</label>
+                  <label class="labelOp"><input type="radio" name="forma" value="círculo">  Círculo</label>
+              </div>
+          </div>
   
+          <!-- Sección de Porciones -->
+          <div class="section">
+              <label class="labelForm">Porciones:</label>
+              <div id="grupoForma">
+                  <label class="labelOp"><input type="radio" name="porciones" value="4-10"> 4 - 10</label>
+                  <label class="labelOp"><input type="radio" name="porciones" value="10-12"> 10 - 12</label>
+                  <label class="labelOp"><input type="radio" name="porciones" value="15-20"> 15 - 20</label>
+                  <label class="labelOp"><input type="radio" name="porciones" value="20-25"> 20 - 25</label>
+                  <label class="labelOp"><input type="radio" name="porciones" value="25-30"> 25 - 30</label>
+                  <label class="labelOp">Otro: <input type="text" id="mensage-porciones" name="mensaje"></label>
+              </div>
+          </div>
+  
+          <!-- Sección de Relleno -->
+          <div class="section">
+              <label class="labelForm">Relleno:</label>
+              <div id="grupoForma">
+                  <label class="labelOp"><input type="radio" name="relleno" value="chocolate"> Chocolate</label>
+                  <label class="labelOp"><input type="radio" name="relleno" value="manjar"> Manjar</label>
+                  <label class="labelOp"><input type="radio" name="relleno" value="crema-pastelera"> Crema Pastelera</label>
+                  <label class="labelOp"><input type="radio" name="relleno" value="frutas"> Frutas</label>
+                  <label class="labelOp">Otro: <input type="text" id="mensage_relleno" name="mensaje"></label>
+              </div>
+          </div>
+  
+          <!-- Sección de Cubierta -->
+          <div class="section">
+              <label class="labelForm">Cubierta:</label>
+              <div id="grupoForma">
+                  <label class="labelOp"><input type="radio" name="cubierta" value="chantilly"> Chantilly</label>
+                  <label class="labelOp"><input type="radio" name="cubierta" value="fondant"> Fondant</label>
+                  <label class="labelOp"><input type="radio" name="cubierta" value="crema-batida"> Crema batida</label>
+                  <label class="labelOp">Otro: <input type="text" id="mensage-cubierta" name="mensaje"></label>
+              </div>
+          </div>
+  
+          <!-- Sección de Distribución -->
+          <div class="section">
+              <label class="labelForm">Distribución:</label>
+              <div id="grupoForma">
+                  <label class="labelOp"><input type="radio" name="distribucion" value="1-nivel"> 1 Nivel</label>
+                  <label class="labelOp"><input type="radio" name="distribucion" value="2-niveles"> 2 Niveles</label>
+                  <label class="labelOp"><input type="radio" name="distribucion" value="3-niveles"> 3 Niveles</label>
+                  <label class="labelOp">Otro: <input type="text" id="mensage-distribucion" name="mensaje"></label>
+              </div>
+          </div>
+  
+          <!-- Sección de Decoración -->
+          <div class="section">
+              <label class="labelForm">Decoración:</label>
+              <div id="grupoForma">
+                  <label class="labelOp"><input type="checkbox" name="decoracion" value="perlas-comestibles"> Perlas comestibles</label>
+                  <label class="labelOp"><input type="checkbox" name="decoracion" value="frutas"> Frutas</label>
+                  <label class="labelOp"><input type="checkbox" name="decoracion" value="flores"> Flores</label>
+                  <label class="labelOp"><input type="checkbox" name="decoracion" value="grageas"> Grageas</label>
+                  <label class="labelOp"><input type="checkbox" name="decoracion" value="chispas-de-chocolate"> Chispas de chocolate</label>
+                  <label class="labelOp">Otros: <input type="text" id="mensage-decoracion" name="mensaje"></label>
+              </div>
+          </div>
+  
+          <!-- Sección de Texto o mensaje -->
+          <div class="section">
+              <label class="labelForm">Texto o mensaje:</label>
+              <input type="text" id="mensage-texto" name="mensaje">
+          </div>
+  
+          <!-- Sección de Personalización adicional -->
+          <div class="section">
+              <label class="labelForm">Personalización adicional:</label>
+              <input type="text" id="mensage-personalizacion" name="mensaje">
+          </div>
+  
+          <!-- Botón de enviar -->
+          <div class="section">
+              <button type="button" id="submitBtn">Generar Pastel</button>
+          </div>
+      </form>
+  </div>
 
-<footer>
-  <p>Make Your Cake © 2025 | Designed with ❤️</p>
-</footer>
-  <script src="/static/script.js"></script>
-</body>
+  <!-- Agregar un campo oculto para el pastelero -->
+<input type="hidden" id="pastelero_id" name="pastelero_id" value="PASTELERO_ID">
 
-</html>
+<!-- Mostrar las imágenes generadas -->
+<div id="imagenes-generadas" style="display: none;">
+    <h3>Selecciona una imagen:</h3>
+    <div id="imagenes-container"></div>
+    <button type="button" id="seleccionar-imagen-btn">Seleccionar Imagen</button>
+</div>
+
+<!-- Botón para enviar a WhatsApp -->
+<button type="button" id="whatsapp-btn" style="display: none;">Contactar al Pastelero</button>
+
+<!-- Mensaje después de generar -->
+<div id="shareMessage" style="display:none;">
+    <p>Selecciona una imagen para compartir en WhatsApp:</p>
+    <div id="generatedImages"></div>
+    <button id="shareBtn" style="display:none;">Compartir en WhatsApp</button>
+</div>
+
+
+{% endblock %}
+
