--- a/Frontend/templates/index.html
+++ b/Frontend/templates/index.html
@@ -1,17 +1,20 @@
-<!-- templates/base.html -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
    <meta charset="UTF-8">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <link rel="icon" href="/static/images/LOGOT.ico" type="image/x-icon">
-   <link rel="stylesheet" href="/static/style.css">
+   <link rel="stylesheet" href="/static/styles/style.css">
+   <link rel="stylesheet" href="/static/styles/style_index.css">
    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
    <link href="https://fonts.googleapis.com/css2?family=Slabo+27px&display=swap" rel="stylesheet">
    <link href="https://fonts.googleapis.com/css2?family=Dancing+Script&display=swap" rel="stylesheet">
 
    <title>TartamIA</title>
+   <script src="/static/script.js" defer></script>
+   {% block head %}{% endblock %}
+
 </head>
 <body>
    <header>
@@ -24,8 +27,25 @@
                <li><button id="homeBtn"><img class="imgNav" src="/static/images/home.png">Home</button></li>
                <li><button id="formBtn"><img class="imgNav" src="/static/images/pastel.png">¡Haz tu Pastel!</button></li>
                <li><button id="productsBtn"><img class="imgNav" src="/static/images/producto.png">Productos</button></li>
-               <li><button id="contactBtn"><img class="imgNav" src="/static/images/contacto.png">Contacto</button></li>
-               <li><button id="loginBtn"><img class="imgNav" src="/static/images/confi.png"></button></li>
+               
+               <nav id="menu">
+                <ul>
+                  <li class="dropdown">
+                    <button id="dropdownBtn" class="opcionesC">
+                      <img class="imgNav" src="/static/images/confi.png" alt="Configuración">
+                    </button>
+                    <!-- Menú desplegable -->
+                    <div class="dropdown-content">
+                      <a href="/profile/">
+                        <img class="imgNav" src="/static/images/profile.png" alt="Perfil">Perfil
+                      </a>
+                      <a href="/">
+                        <img class="imgNav" src="/static/images/logOut.png" alt="Cerrar sesión">Cerrar sesión
+                      </a>
+                    </div>
+                  </li>
+                </ul>
+              </nav>
            </ul>
        </nav>
    </header>
@@ -39,6 +59,6 @@
        <p>Make Your Cake © 2025 | Designed with ❤️</p>
    </footer>
 
-   <script src="/static/script.js"></script>
+   
 </body>
 </html>
