--- a/Frontend/templates/login.html
+++ b/Frontend/templates/login.html
@@ -2,9 +2,11 @@
 <html lang="en">
 <head>
    <meta charset="UTF-8">
+   
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <link rel="icon" href="../static/images/LOGOT.ico" type="image/x-icon">
-   <link rel="stylesheet" href="/static/style.css">
+   <link rel="stylesheet" href="/static/styles/style.css">
+   <link rel="stylesheet" href="/static/styles/style_login.css">
    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
    <link href="https://fonts.googleapis.com/css2?family=Slabo+27px&display=swap" rel="stylesheet">
@@ -12,18 +14,18 @@
 
    <title>TartamIA</title>
 </head>
-<body>
-    <section id="custom-background"  class="vh-100 " >
-        <div class="container py-5 h-100">
-          <div class="row d-flex justify-content-center align-items-center h-100">
-            <div class="col col-xl-10">
+<body id="login">
+    <section  class="vh-100  " >
+        <div class=" py-5 h-90 container-login">
+          <div class="row d-flex justify-content-center align-items-center h-100  ">
+            <div class="col col-xl-10 ">
               <div class="card " >
-                <div class="row g-0">
-                  <div class="col-md-6 col-lg-5 d-none d-md-block ">
-                    <img src="/static/images/LOGOT.png"
-                      alt="login form" class="img-fluid custom-img "  />
+                <div class="row g-0 content-cards">
+                  <div class="col-md-6 col-lg-5 d-none d-md-block container-Logo">
+                    <img  src="/static/images/LOGOT.png"
+                      alt="login form" class="img-fluid custom-img  imgLogin"  />
                   </div>
-                  <div class="col-md-6 col-lg-7 d-flex align-items-center ">
+                  <div class="col-md-6 col-lg-7 d-flex align-items-center  container-Card">
                     <div id="labelFL" class="card-body p-4 p-lg-5 text-black  ">
       
                       <form >
@@ -51,7 +53,7 @@
       
                        <!-- <a class="small text-muted" href="#!">¿Has olvidado tu contraseña?</a> -->
                         <p  class="mb-5 pb-lg-2 class-R labelLogin labelFLS" >¿No tienes una cuenta? 
-                            <a class="labelFLS" href="/Frontend/templates/registrer.html">Regístrate aquí</a></p>
+                            <a class="labelFLS" href="/registrer/">Regístrate aquí</a></p>
                        
                       </form>
       
