--- a/Frontend/templates/home.html
+++ b/Frontend/templates/home.html
@@ -3,6 +3,7 @@
 
 {% block head %}
 <link rel="stylesheet" href="/static/styles/style_home.css">
+
 {% endblock %}
 
 {% block content %}
@@ -23,11 +24,11 @@
                             <li class="textpasos"><strong class="pasos">Paso 1:</strong> Elige el tipo de pastel: tamaño, sabor y forma.</li>
                             <li class="textpasos"><strong class="pasos">Paso 2:</strong> Personaliza el diseño: colores, temática y detalles.</li>
                             <li class="textpasos"><strong class="pasos">Paso 3:</strong> Deja que la IA cree una propuesta única para ti.</li>
-                            <li class="textpasos"><strong class="pasos">Paso 4:</strong> Revisa y ajusta el diseño hasta que sea perfecto.</li>
+                            <li class="textpasos"><strong class="pasos">Paso 4:</strong> Elige tu diseño.</li>
                         </ul>
                         
                         <!-- Botón para comenzar la personalización -->
-                        <button  class="btnGenerate" id="btnGenerate" type="button">¡Comienza tu diseño personalizado!</button>
+                        <button  class="btnGenerate" id="btnGenerate" >¡Comienza tu diseño personalizado!</button>
                     </div>
         
                     <!-- Columna para el carrusel -->
