--- a/Frontend/templates/login.html
+++ b/Frontend/templates/login.html
@@ -28,7 +28,7 @@
                   <div class="col-md-6 col-lg-7 d-flex align-items-center  container-Card">
                     <div id="labelFL" class="card-body p-4 p-lg-5 text-black  ">
       
-                      <form >
+                      <form method="POST" action="/login/">
       
                         <div class="d-flex align-items-center mb-3 pb-1">
                           <i class="fas fa-cubes fa-2x me-3 clas-i" ></i>
@@ -38,22 +38,28 @@
                         <h5 class="fw-normal mb-3 pb-3 labelFLS" style="letter-spacing: 1px;">Inicia sesión en tu cuenta</h5>
       
                         <div data-mdb-input-init class="form-outline mb-4 labelFL ">
-                          <input type="email" id="form2Example17" class="form-control form-control-lg" />
+                          <input type="email" id="form2Example17" class="form-control form-control-lg" name="username" />
                           <label class="form-label " for="form2Example17">Email </label>
                         </div>
       
                         <div data-mdb-input-init class="form-outline mb-4 labelLogin labelFL">
-                          <input type="password" id="form2Example27" class="form-control form-control-lg" />
+                          <input type="password" id="form2Example27" class="form-control form-control-lg"  name="password"/>
                           <label class="form-label" for="form2Example27">Contraseña</label>
                         </div>
+
+                                            
       
                         <div class="pt-1 mb-4 opciones">
-                          <button   class="btn btn-dark btn-lg btn-block " type="button">Login</button>
+                          <button   id="btnLogin" class="btn btn-dark btn-lg btn-block " type="submit">Login</button>
                         </div>
-      
+
+                        <p id="error-message" style="color: red; display: none;"></p>
+
+
+                        
                        <!-- <a class="small text-muted" href="#!">¿Has olvidado tu contraseña?</a> -->
                         <p  class="mb-5 pb-lg-2 class-R labelLogin labelFLS" >¿No tienes una cuenta? 
-                            <a class="labelFLS" href="/registrer/">Regístrate aquí</a></p>
+                            <a class="labelFLS" href="/register/">Regístrate aquí</a></p>
                        
                       </form>
       
