--- a/Frontend/templates/register.html
+++ b/Frontend/templates/register.html
@@ -10,6 +10,7 @@
    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
    <link href="https://fonts.googleapis.com/css2?family=Slabo+27px&display=swap" rel="stylesheet">
    <link href="https://fonts.googleapis.com/css2?family=Dancing+Script&display=swap" rel="stylesheet">
+   <script src="/static/scripts/script_register.js" defer></script>
 
    <title>TartamIA</title>
 </head>
@@ -25,41 +26,41 @@
             <div class="row d-flex justify-content-center">
                 <div class="col-lg-8">
                     <h2 class="fw-bold mb-5 labelR">Regístrate ahora</h2>
-                    <form>
+                    <form method="POST" action="/register/"  id="registration-form">
                         <div class="row">
                             <div class="col-md-6 mb-4">
                                 <div class="form-outline">
-                                    <input type="text" id="form3Example1" class="form-control" />
+                                    <input type="text" id="username" class="form-control"  name="username"/>
                                     <label class="form-label" for="form3Example1">Nombre</label>
                                 </div>
                             </div>
                             <div class="col-md-6 mb-4">
                                 <div class="form-outline">
-                                    <input type="text" id="form3Example2" class="form-control" />
+                                    <input type="text" id="full_name" class="form-control" name="full_name" />
                                     <label class="form-label" for="form3Example2">Apellido</label>
                                 </div>
                             </div>
                         </div>
 
                         <div class="form-outline mb-4">
-                          <input type="password" id="form3Example4" class="form-control" />
+                          <input type="tel" id="numTel" class="form-control" name="phone_number"/>
                           <label class="form-label" for="form3Example4">Número de teléfono</label>
                       </div>
 
 
                         <div class="form-outline mb-4">
-                            <input type="email" id="form3Example3" class="form-control" />
+                            <input type="email" id="email" class="form-control" name="email" />
                             <label class="form-label" for="form3Example3">Email</label>
                         </div>
 
                         <div class="form-outline mb-4">
-                            <input type="password" id="form3Example4" class="form-control" />
+                            <input type="password" id="password" class="form-control" name="password"/>
                             <label class="form-label" for="form3Example4">Contraseña</label>
                         </div>
 
                         
 
-                        <button id="registrerBtn">
+                        <button id="registerBtn" type="submit">
                           Regístrate
                         </button>
 
